[project]
name = "spectrogram-generator"
version = "0.1.0"
package-mode = false
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "filetype (>=1.2.0,<2.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "redis (>=6.2.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "alembic (>=1.16.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
isort = "^6.0.1"
httpx = "^0.28.1"
flake8 = "^7.2.0"
mypy = "^1.16.0"
pytest-asyncio = "^1.0.0"

